--- a/ExampleOOP/ExampleWebApp/ExampleWebApp.csproj
+++ b/ExampleOOP/ExampleWebApp/ExampleWebApp.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MudBlazor" Version="6.20.0" />
+    <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="MudBlazor" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
