Added OrderService and start of Order Page, Add ExtensionsService for DB Access, Added proper code to Web Project Program.cs. Reversed Engineered the DB.

--- a/ExampleWestWindSolution/ExampleWestWind/ExampleWestWind.csproj
+++ b/ExampleWestWindSolution/ExampleWestWind/ExampleWestWind.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MudBlazor" Version="7.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WestWindDB\WestWindDB.csproj" />
+  </ItemGroup>
+
 </Project>
