--- a/ExampleWestWindSolution/ExampleWestWind/appsettings.json
+++ b/ExampleWestWindSolution/ExampleWestWind/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WWDB": "Server=MOMDESKTOP\\SQLEXPRESS;Database=WestWind;Trusted_Connection=true;MultipleActiveResultSets=true;encrypt=false"
+  }
 }
